--- a/src/main/resources/Calendar/taskBox.fxml
+++ b/src/main/resources/Calendar/taskBox.fxml
@@ -4,14 +4,20 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<HBox styleClass="taskBox" fx:id="textHBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXTextField fx:id="textBox" promptText="Enter Task..." />
-      <JFXHamburger>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-      </JFXHamburger>
+      <HBox fx:id="textHBox" styleClass="taskBox">
+         <children>
+            <JFXTextField fx:id="textBox" promptText="Enter Task..." />
+            <JFXHamburger>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </JFXHamburger>
+         </children>
+      </HBox>
    </children>
-</HBox>
+</VBox>
