--- a/src/main/resources/Schedule/wankTest.fxml
+++ b/src/main/resources/Schedule/wankTest.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.BorderPane?>
@@ -555,7 +556,10 @@
       <Pane prefHeight="388.0" prefWidth="102.0" BorderPane.alignment="CENTER" />
    </right>
    <left>
-      <BorderPane prefHeight="426.0" prefWidth="104.0" BorderPane.alignment="CENTER" />
+      <BorderPane prefHeight="426.0" prefWidth="104.0" BorderPane.alignment="CENTER">
+         <bottom>
+            <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+         </bottom></BorderPane>
    </left>
    <bottom>
       <BorderPane prefHeight="58.0" prefWidth="573.0" BorderPane.alignment="CENTER">
