--- a/src/main/resources/Schedule/wank_layout.fxml
+++ b/src/main/resources/Schedule/wank_layout.fxml
@@ -558,7 +558,7 @@
    <left>
       <BorderPane prefHeight="426.0" prefWidth="104.0" BorderPane.alignment="CENTER">
          <bottom>
-            <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+            <Button mnemonicParsing="false" text="Refresh Schedule" BorderPane.alignment="CENTER" />
          </bottom></BorderPane>
    </left>
    <bottom>
