--- a/src/main/resources/Schedule/ipass login.fxml
+++ b/src/main/resources/Schedule/ipass login.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.Schedule.loginController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65"
+            fx:controller="WHS_planner.Schedule.loginController">
    <center>
       <BorderPane prefHeight="384.0" prefWidth="266.0" BorderPane.alignment="CENTER">
          <top>
@@ -45,7 +43,7 @@
             <Pane prefHeight="59.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
          </bottom>
          <center>
-            <Label text="Login to Ipass" BorderPane.alignment="CENTER">
+            <Label text="Login to iPass" BorderPane.alignment="CENTER">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font></Label>
