--- a/src/main/resources/Schedule/wank_layout.fxml
+++ b/src/main/resources/Schedule/wank_layout.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0"
-            prefWidth="573.0" xmlns="http://javafx.com/javafx/8.0.65"
-            fx:controller="WHS_planner.Schedule.ScheduleController">
+<?import com.jfoenix.controls.JFXSpinner?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="573.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.Schedule.ScheduleController">
    <center>
       <GridPane fx:id="grid" style="-fx-border-color: White; -fx-grid-lines-visible: False;" BorderPane.alignment="CENTER">
          <columnConstraints>
@@ -539,27 +545,33 @@
          </children>
       </GridPane>
    </center>
-   <top>
-      <Label fx:id="Title3" alignment="CENTER" prefHeight="17.0" prefWidth="405.0" text="Label" textAlignment="CENTER" BorderPane.alignment="CENTER">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-   </top>
    <right>
       <Pane prefHeight="388.0" prefWidth="102.0" BorderPane.alignment="CENTER" />
    </right>
    <left>
       <BorderPane prefHeight="426.0" prefWidth="104.0" BorderPane.alignment="CENTER">
          <bottom>
-             <Button fx:id="reset" mnemonicParsing="false" onAction="#updateSchedule" text="Reset Schedule"
-                     BorderPane.alignment="CENTER">
+             <Button fx:id="reset" mnemonicParsing="false" onAction="#updateSchedule" text="Reset Schedule" BorderPane.alignment="CENTER">
                <font>
                   <Font size="9.0" />
                </font></Button>
          </bottom></BorderPane>
    </left>
    <bottom>
-       <BorderPane prefHeight="58.0" prefWidth="573.0" BorderPane.alignment="CENTER"/>
+       <BorderPane prefHeight="58.0" prefWidth="573.0" BorderPane.alignment="CENTER" />
    </bottom>
+   <top>
+      <BorderPane prefHeight="11.0" prefWidth="573.0" BorderPane.alignment="CENTER">
+         <center>
+            <Label fx:id="Title3" alignment="CENTER" prefHeight="17.0" prefWidth="405.0" text="Label" textAlignment="CENTER" BorderPane.alignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+         </center>
+         <bottom>
+            <JFXSpinner fx:id="spinner" radius="6.0" BorderPane.alignment="CENTER" />
+         </bottom>
+      </BorderPane>
+   </top>
 </BorderPane>
